--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,10 @@
 * {
     box-sizing: border-box;
     /* wireframing border */
-    border: 1px solid red;
-
+    /* border: 1px solid red; */
+    font-family: 'Open Sans', sans-serif;
     padding: 0;
     margin: 0;
-    color: #ffff;
 }
 
 header,
@@ -21,17 +20,37 @@ header {
     position: fixed;
     left: 0;
     right: 0;
+    color: #ffff;
+}
+
+.pagemenu {
+    float: right;
+    color: #ffff;
+}
+
+ul{
+    list-style-type: none;
 }
 
 main {
     min-height: 80vh;
-    padding-top: 70px;
+    padding-top: 10%;
+    color: #0000;
 }
 
 img {
     height: 300px;
+    position: center;
+    left: 50%;
+}
+
+form {
+    position: center;
 }
 
 footer {
-
+    background-color: #5c1310;
+    left: 0;
+    right: 0;
+    color: #ffff;
 }
