--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
     font-family: 'Open Sans', sans-serif;
     padding: 0;
     margin: 0;
-    color: black;
 }
 
 header,
@@ -21,6 +20,13 @@ header {
     left: 0;
     right: 0;
     color: #ffff;
+}
+
+header h1 {
+    font-size: 16px;
+    /* font-weight: normal; */
+    display: inline-block;
+    text-transform: uppercase;
 }
 
 .pagemenu {
@@ -48,8 +54,14 @@ main {
     position: relative;
 }
 
+h2 {
+    color: black;
+    text-align: center;
+}
+
 p {
-    color: #0000;
+    color: black;
+    text-align: center;
 }
 
 img {
